k8s/eventstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: eventstore
  name: eventstore
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eventstore
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/eventstore: "true"
        io.kompose.network/global: "true"
        io.kompose.service: eventstore
    spec:
      containers:
        - env:
            - name: RACE_DETECTOR
              value: "1"
          image: acim/go-reflex
          name: microservices-eventstore
          ports:
            - containerPort: 5011
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: eventstore-claim0
      restartPolicy: Always
      volumes:
        - name: eventstore-claim0
          persistentVolumeClaim:
            claimName: eventstore-claim0
status: {}
