k8s/fluentd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: fluentd
  name: fluentd
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fluentd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/elasticsearch: "true"
        io.kompose.network/global: "true"
        io.kompose.service: fluentd
    spec:
      containers:
        - image: fluentd
          name: fluentd
          ports:
            - containerPort: 24224
            - containerPort: 24224
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /fluentd/etc
              name: fluentd-claim0
      restartPolicy: Always
      volumes:
        - name: fluentd-claim0
          persistentVolumeClaim:
            claimName: fluentd-claim0
status: {}
