k8s/eventstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: eventstore
  name: eventstore
spec:
  ports:
    - name: "50011"
      port: 50011
      targetPort: 5011
  selector:
    io.kompose.service: eventstore
status:
  loadBalancer: {}
